@@ -4,7 +4,7 @@
 // Author:      Mattia Barbon
 // Modified by:
 // Created:     04/05/2001
-// RCS-ID:      $Id: Print.xs,v 1.14 2004/12/21 21:12:55 mbarbon Exp $
+// RCS-ID:      $Id: Print.xs,v 1.15 2005/03/14 20:59:27 mbarbon Exp $
 // Copyright:   (c) 2001-2002, 2004 Mattia Barbon
 // Licence:     This program is free software; you can redistribute it and/or
 //              modify it under the same terms as Perl itself
@@ -31,7 +31,10 @@ INCLUDE: XS/PrintDialogData.xs
 INCLUDE: XS/PrintPreview.xs
 INCLUDE: XS/Printout.xs
 INCLUDE: XS/PrintDialog.xs
-INCLUDE: XS/Preview.xs
+
+INCLUDE: perl ../../script/xsubppp.pl --typemap ../../typemap.xsp XS/Preview.xs |
+
+INCLUDE: perl ../../script/xsubppp.pl --typemap ../../typemap.xsp XS/PrintFactory.xsp |
 
 #include "cpp/pr_constants.cpp"
 
